แอพ: ลบ marker ในหน้าทดสอบ visualization อัตโนมัติ

--- a/assets/server/connection_visualization_new.html
+++ b/assets/server/connection_visualization_new.html
@@ -691,7 +691,7 @@
       <ul>
         <li>จุดสีเขียว คือตำแหน่งของผู้ใช้ app</li>
         <li>เส้นที่มีจุดสีขาวเคลื่อนที่ หมายถึง ขณะนั้นมีการเชื่อมต่อจาก app มายัง server</li>
-        <li>เส้นและจุดสีเขียวจะแสดงค้างไว้ประมาณ 1 นาที (ปรับได้ในโค้ด) โดยสีจะค่อยๆจางลงเมื่อเวลาผ่านไป</li>
+        <li>เส้นและจุดสีเขียวจะแสดงค้างไว้ประมาณ 1 นาที (ปรับช่วงเวลาได้ในโค้ด) โดยสีจะค่อยๆจางลงเมื่อเวลาผ่านไป</li>
         <li>แสดงผลแบบ realtime โดยเชื่อมกับ API ด้วย Socket.IO</li>
       </ul>
     </div>
