เพิ่มหน้าทดสอบยิงข้อมูล visualization

--- a/assets/server/connection_visualization_new.html
+++ b/assets/server/connection_visualization_new.html
@@ -674,6 +674,7 @@
 <div class="sidebar">
   <a href="schematic_map.html">Schematic Map</a>
   <a class="active" href="connection_visualization_new.html">App Connection Visualization</a>
+  <a href="test_visualization.html">Test Visualization</a>
 </div>
 
 <!-- Page content -->
