ปรับข้อความหน้าทดสอบยิงข้อมูล visualization

--- a/assets/server/test_visualization.html
+++ b/assets/server/test_visualization.html
@@ -62,7 +62,7 @@
     <div id="map" style="flex: 1; height: 100%; border: 0px solid red;"></div>
     <div style="flex: 1; margin-top: 16px">
       <ul>
-        <li>ให้คลิกเมาส์บนแผนที่ โดยสมมติว่าจุดที่คลิก คือตำแหน่งของผู้ใช้งานแอปพลิเคชัน EXAT Traffic</li>
+        <li>ให้คลิกเมาส์บนแผนที่ โดยสมมติว่าจุดที่คลิก คือตำแหน่งของผู้ใช้งานแอปพลิเคชัน EXAT Traffic, พิกัด lat/lng ที่ตำแหน่งนั้นจะถูกส่งไปแสดงผลในหน้า App Connection Visualization</li>
       </ul>
     </div>
   </div>
