--- a/assets/server/test_visualization.html
+++ b/assets/server/test_visualization.html
@@ -63,6 +63,7 @@
     <div style="flex: 1; margin-top: 16px">
       <ul>
         <li>ให้คลิกเมาส์บนแผนที่ โดยสมมติว่าจุดที่คลิก คือตำแหน่งของผู้ใช้งานแอปพลิเคชัน EXAT Traffic, พิกัด lat/lng ที่ตำแหน่งนั้นจะถูกส่งไปแสดงผลในหน้า App Connection Visualization</li>
+        <li>ต้องเปิดหน้า App Connection Visualization ไว้ในอีกแท็บหรืออีกหน้าต่างของ browser จึงจะเห็นผลลัพธ์</li>
       </ul>
     </div>
   </div>
