หน้า visualization: filter point ที่ dead แล้ว ตอนเรียก visualization api

--- a/assets/server/connection_visualization_new.html
+++ b/assets/server/connection_visualization_new.html
@@ -53,6 +53,7 @@
       const socket = io();
       socket.on('location', function (location) {
         //alert(location);
+        pointList = pointList.filter(point => !point.dead);
         pointList.push(location);
       });
     });
