--- a/assets/server/schematic_map.html
+++ b/assets/server/schematic_map.html
@@ -4,6 +4,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta charset="UTF-8">
   <title>EXAT Traffic - Schematic Map</title>
+  <link rel="stylesheet" href="css/main.css">
   <style>
     @font-face { font-family: Mitr-Light; src: url('fonts/Mitr-Light.ttf'); }
     @font-face { font-family: Mitr-Medium; src: url('fonts/Mitr-Medium.ttf'); }
