--- a/assets/server/schematic_map.html
+++ b/assets/server/schematic_map.html
@@ -4,6 +4,10 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta charset="UTF-8">
   <title>EXAT Traffic - Schematic Map</title>
+  <link rel="stylesheet"
+        href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
+        integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh"
+        crossorigin="anonymous">
   <link rel="stylesheet" href="css/main.css">
   <style>
     @font-face { font-family: Mitr-Light; src: url('fonts/Mitr-Light.ttf'); }
