refactor schematic_map_full.html

--- a/assets/server/schematic_map_full.html
+++ b/assets/server/schematic_map_full.html
@@ -4735,7 +4735,7 @@
       const width = mainContainer.width();
       const height = mainContainer.height();
 
-      //alert(`Width: ${width}, Height: ${height}`);
+      alert(`Width: ${width}, Height: ${height}`);
 
       const mapRatio = MAP_WIDTH / MAP_HEIGHT;
       if (width / height > mapRatio) {
