refactor schematic_map_full.html

--- a/assets/server/schematic_map_full.html
+++ b/assets/server/schematic_map_full.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta name="viewport" content="width=device-width, initial-scale=0.5">
+  <meta name="viewport" content="width=device-width, initial-scale=0.5, user-scalable=no">
   <meta charset="UTF-8">
   <title>EXAT Traffic - Schematic Map</title>
   <!--<link rel="stylesheet"
@@ -4735,7 +4735,7 @@
       const width = mainContainer.width();
       const height = mainContainer.height();
 
-      alert(`Width: ${width}, Height: ${height}`);
+      //alert(`Width: ${width}, Height: ${height}`);
 
       const mapRatio = MAP_WIDTH / MAP_HEIGHT;
       if (width / height > mapRatio) {
