--- a/assets/server/schematic_map_full.html
+++ b/assets/server/schematic_map_full.html
@@ -39,7 +39,7 @@
   <div class="main-container" style="border: 0px solid red; display: flex; flex-direction: column; justify-content: center; align-items: center; width: 100%; height: 100%">-->
 <div id="main-container" style="display: flex; flex-direction: column; justify-content: center; align-items: center; width: 100vw; height: 100vh; border: 0px solid pink">
   <div id="svg-container" class="dragscroll" style="overflow: hidden; width: 540px; height: 600px; border: 0px solid grey; cursor: pointer">
-    <div id="svg-wrapper" style="position: relative; display: flex; width: 100%; height: 100%; border: solid 0px #ddd">
+    <div id="svg-wrapper" style="position: relative; width: 100%; height: 100%; border: solid 0px #ddd">
       <!--<div id="data" style="position: fixed; top: 0; right: 0; width: 260px; height: 100%; padding: 5px; background-color: navajowhite; border: 1px solid #ccc; overflow: auto"></div>-->
 
       <?xml version="1.0" encoding="utf-8"?>
@@ -4585,7 +4585,28 @@
 <!--<script src="https://code.jquery.com/jquery-1.12.4.js"></script>
 <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>-->
 <script src="node_modules/dragscroll/dragscroll.js"></script>
-<script src="js/DragDropTouch.js"></script>
+
+<!--<script>
+  $.fn.attachDragger = function () {
+    var attachment = false, lastPosition, position, difference;
+    $($(this).selector).on("mousedown mouseup mousemove", function (e) {
+      if (e.type == "mousedown") attachment = true, lastPosition = [e.clientX, e.clientY];
+      if (e.type == "mouseup") attachment = false;
+      if (e.type == "mousemove" && attachment == true) {
+        position = [e.clientX, e.clientY];
+        difference = [(position[0] - lastPosition[0]), (position[1] - lastPosition[1])];
+        $(this).scrollLeft($(this).scrollLeft() - difference[0]);
+        $(this).scrollTop($(this).scrollTop() - difference[1]);
+        lastPosition = [e.clientX, e.clientY];
+      }
+    });
+    $(window).on("mouseup", function () {
+      attachment = false;
+    });
+  }
+</script>-->
+
+<!--<script src="js/DragDropTouch.js"></script>-->
 <script src="/socket.io/socket.io.js"></script>
 <script src="cctv.js"></script>
 <script>
@@ -4774,7 +4795,8 @@
 <script>
   $(function () {
     $('#logo').hide();
-    const schematicMap = new SchematicMap(2);
+    /*$("#svg-container").attachDragger();*/
+    const schematicMap = new SchematicMap(1);
   });
 </script>
 </body>
