--- a/assets/server/schematic_map_full.html
+++ b/assets/server/schematic_map_full.html
@@ -39,7 +39,7 @@
   <div class="main-container" style="border: 0px solid red; display: flex; flex-direction: column; justify-content: center; align-items: center; width: 100%; height: 100%">-->
 <div id="main-container" style="display: flex; flex-direction: column; justify-content: center; align-items: center; width: 100vw; height: 100vh; border: 0px solid pink">
   <div id="svg-container" class="dragscroll" style="overflow: hidden; width: 540px; height: 600px; border: 0px solid grey; cursor: pointer">
-    <div id="svg-wrapper" style="position: relative; width: 100%; height: 100%; border: solid 0px #ddd">
+    <div id="svg-wrapper" style="position: relative; display: flex; width: 100%; height: 100%; border: solid 0px #ddd">
       <!--<div id="data" style="position: fixed; top: 0; right: 0; width: 260px; height: 100%; padding: 5px; background-color: navajowhite; border: 1px solid #ccc; overflow: auto"></div>-->
 
       <?xml version="1.0" encoding="utf-8"?>
@@ -4796,7 +4796,7 @@
   $(function () {
     $('#logo').hide();
     /*$("#svg-container").attachDragger();*/
-    const schematicMap = new SchematicMap(1);
+    const schematicMap = new SchematicMap(3);
   });
 </script>
 </body>
