ปรับสีเส้นสภาพจราจร schematic_map_full.html

--- a/assets/server/schematic_map_full.html
+++ b/assets/server/schematic_map_full.html
@@ -4666,13 +4666,13 @@
         if (trafficIndex == null) {
           color = '#808080';
         } else if (trafficIndex < 0.25) {
-          color = '#800000'
+          color = '#790A11'
         } else if (trafficIndex < 0.5) {
-          color = 'red';
+          color = '#EB222C';
         } else if (trafficIndex < 0.75) {
-          color = 'orange';
+          color = '#FDBD02';
         } else {
-          color = 'green';
+          color = '#22B573';
         }
 
         /*$('.chunk').css('fill', 'pink');
